--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
           <div class="col-lg-4">
             <p>I also enjoy learning and doing gigs related to- Rocketry (yeah! I love SpaceX, and would love to work for them, may the opportunity arise), exploration for Extra-terrestrial life, innovation on Aerial systems and Superfast flight.</p>
 
-            <p>Just to be clear, Yeah! I am one of those nerds who have an everlasting itch for knowledge, I like to do new things, and on the way to enlightenment, often discover- new and better ways to do them.</p>
-			<p>Other skills that I possess are: MATLAB,Python,C,Java,openCV using C/python,XFLR5,ROS,Video processing using Vegas pro,Typesetting and some basic webDev.</p>
+            <p>To be clear, Yeah! I am one of those nerds who have an everlasting itch for knowledge, I like to do new things, and on the way to enlightenment, often discover- new and better ways to do them.</p>
+			<p>Other skills that I possess are: MATLAB, Python, C, Java, OpenCV using C/python, XFLR5, ROS, Video processing using Vegas pro, Typesetting and some basic web dev.</p>
 			<a href="./resume.pdf" download="resume" class="btn smoothscroll btn-primary"><i class="fa fa-download"></i>Download Resume</a>
 		  </div>
 		  
@@ -143,7 +143,7 @@
         <div class="row ">
           <div class="col-12 mb-5 position-relative">
             <h2 class="section-title text-center mb-5">Involvements</h2>			
-            <p class="text-center">My involvements at IITK campus.</p>
+            <p class="text-center">My involvements at IITK campus, Apart from being a full time Student.</p>
             </div>
           
           <div class="col-md-6 mb-4" data-aos="fade-up" data-aos-delay="">
@@ -153,7 +153,7 @@
               </div>
               <div class="service-about">
                 <h3>Secretary, Astronomy Club IITK</h3>
-                <p>Taking on the title from 2020, I am currently working as secretary for Astro-club, here I mostly write for Articles for the Club(Reviews and learning resource), and I enjoy it- "Researching new things in detail, only so you can explain it easily to a layman", apart from that, I have also helped club Organizing Astro-quizzes and Stargazing watchparties.</p>
+                <p>Taking on the title from 2020, I am currently working as secretary for Astro-club, here I mostly write Articles for the Club(Reviews and learning resource), and I enjoy it- "Researching new things in detail, only so you can explain it easily to a layman", apart from that, I have also helped club Organizing Astro-quizzes and Stargazing watchparties.</p>
               </div>
             </div>
           </div>
@@ -164,7 +164,7 @@
                 <img src="images/flaticon/svg/aerialLogo.svg" alt="Image" class="">
               </div>
               <div class="service-about">
-                <h3>Junior team-member, Aerial Robotics IITK</h3>
+                <h3>Team member, Aerial Robotics IITK</h3>
                 <p>Aerial Robotics is a student team, under student's gymkhana IITK. We work on drones(UAV's), designing the hardware, and writing the code for operations(Autonomous, Cluster and Directed). I am responsible for the hardware requirement's of the team, I can design stuff on CAD and Blender.</p>
               </div>
             </div>
