--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <link rel="stylesheet" href="css/aos.css">
 
     <link rel="stylesheet" href="css/style.css">
-    
+	<link rel="shortcut icon" href="images/favicon.jpg">
+		
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
   
