took down the resume.
security check

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
             <p>To be clear, Yeah! I am one of those nerds who have an everlasting itch for knowledge, I like to do new things, and on the way to enlightenment, often discover- new and better ways to do them.  I took part in International Astronomy and astrophysics compedetion(IAAC), wherein qualifying through various stages,I stood among top 7% of all participants.</p>
 			<p>Other skills that I possess are: MATLAB, Python, C, Java, OpenCV using C/python, XFLR5, ROS, Video processing using Vegas pro, Typesetting and some basic web dev.</p>
-			<a href="./resume.pdf" download="resume" class="btn smoothscroll btn-primary"><i class="fa fa-download"></i>Download Resume</a>
+			<a href="./resNOT.html" download="resume" class="btn smoothscroll btn-primary"><i class="fa fa-download"></i>Download Resume</a>
 		  </div>
 		  
           
